# Nationdex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  uv-lock-check.yml
admin_panel/: collectstatic_safe.py
admin_panel/admin_panel/: pipeline.py
admin_panel/admin_panel/settings/: base.py
ballsdex/: __main__.py  logging.py  settings.py
ballsdex/core/: commands.py
ballsdex/core/image_generator/: image_gen.py
