[project]
name = "ballsdex"
description = ""
authors = [
    { name = 'Auguste "laggron42" Charpentier', email = "laggron42@ballsdex.com" },
    { name = 'Jamie "flare" McGuinness', email = "flare@ballsdex.com" },
]
license = "MIT"
requires-python = ">=3.13, <3.14"
version = "2.29.3"
dependencies = [
    # asyncio
    "uvloop==0.22.1; sys_platform != 'win32'",

    # discord
    "discord.py[speed]==2.6.4",

    # database ORM
    "tortoise-orm[asyncpg]==0.25.1",
    "tortoise-cli==0.2.0",

    # django admin panel
    "uvicorn[standard]==0.38.0",
    "django==5.2.7",
    "django-allow-cidr (>=0.7.1,<0.9.0)",
    "django-nonrelated-inlines==0.2",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-action-forms==2.2.0",
    "django-admin-inline-paginator==0.4.0",
    "dj-database-url==3.0.1",
    "social-auth-app-django==5.6.0",
    "psycopg==3.2.11",
    "psycopg-binary==3.2.11",

    # metrics
    "prometheus-client==0.23.1",

    # misc
    "rich==14.2.0",
    "python-dateutil==2.9.0.post0",
    "Pillow==12.0.0",
    "cachetools==6.2.1",
    "sentry-sdk[asyncpg]==2.42.1",
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "black==24.8.0",
    "flake8-pyproject==1.2.3",
    "flake8==7.3.0",
    "pyright==1.1.406",
    "isort==7.0.0",
    "django-debug-toolbar==6.0.0",
    "pyinstrument==5.1.1",
    "django-types==0.22.0",
    "tomlkit==0.13.3"
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99

[tool.flake8]
ignore = "W503,E203,E999"
max-line-length = 99
exclude = "./admin_panel/admin_panel/settings/*"

[tool.isort]
profile = "black"
line_length = 99

[tool.pyright]
extraPaths = ["./admin_panel"]
pythonVersion = "3.13"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
